# AZNFS-mount

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  _codeql_detected_source_root  generate_package.sh  package.sh  package_azurelinux.sh  packages.csv  your_script.sh
.github/: aznfs-build.yaml  build.yaml  remove_packages.yaml
.github/actions/aznfs-prep-machine/: action.yml  machineSetup.sh
.github/workflows/: aznfs-test.yml  example workflow.yml  prerelease.yml  release.yml  shellcheck.yaml  test.yml
lib/: common.sh  config.txt  log
packaging/aznfs/DEBIAN/: control  postinst  postrm  preinst  prerm
packaging/aznfs/RPM/: aznfs.spec
packaging/aznfs/RPM/SPECS/: aznfs.spec
packaging/aznfs/RPM/SUSE/: aznfs.spec
scripts/: azfilenfs_install.sh  aznfs_install.sh  aznfs_install_github_to_pmc.sh
src/: azfilenfs-watchdog  azfilenfs-watchdog.service  azfswatchdog  aznfswatchdog  aznfswatchdog.service  aznfswatchdogv4  aznfswatchdogv4.service  mount.azfs  mount.aznfs  mount.aznfs.c  mountscript.sh  nfsv3mounthelper.service  nfsv3mountscript.sh  nfsv4mountscript.sh  update.sh
testing/: testscript.sh
turbonfs/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.save  build.sh  sample-config.yaml  sample-turbo-config.yaml  vcpkg-configuration.json  vcpkg.json
turbonfs/inc/: aznfsc.h  aznfsc_config.h.in  fcsm.h  file_cache.h  fs-handler.h  log.h  nfs_client.h  nfs_inode.h  nfs_internal.h  readahead.h  rpc_readdir.h  rpc_stats.h  rpc_task.h  rpc_transport.h  util.h
turbonfs/src/: aznfswatchdog.service  config.cpp  connection.cpp  fcsm.cpp  file_cache.cpp  log.cpp  main.cpp  nfs_client.cpp  nfs_inode.cpp  readahead.cpp  rpc_readdir.cpp  rpc_stats.cpp  rpc_task.cpp  rpc_transport.cpp  util.cpp
